5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1595_1015.log
== TEST (2019-03-26 17:42:42) 
-- CODE:
x=int(1)
y=int(2)
z=int(3)
print(min(x,y,z))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:43:42) 
-- CODE:
x=int(1)
y=int(2)
z=int(3)
print(min(x,y,z))
pirint(int(x+y+z)-(x)-(z))
print(max(x,y,z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pirint(int(x+y+z)-(x)-(z))
NameError: name 'pirint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:43:46) 
-- CODE:
x=int(1)
y=int(2)
z=int(3)
print(min(x,y,z))
print(int(x+y+z)-(x)-(z))
print(max(x,y,z))
-- OUTPUT:
1
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:43:49) 
-- CODE:
x=int(1)
y=int(2)
z=int(3)
print(min(x,y,z))
print(int(x+y+z)-(x)-(z))
print(max(x,y,z))
-- EXECUTION TIME:
0.151072
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
1
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:43:54) 
-- CODE:
x=int(1)
y=int(2)
z=int(3)
print(min(x,y,z))
print(int(x+y+z)-(x)-(z))
print(max(x,y,z))
-- OUTPUT:
1
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:44:18) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:44:22) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- EXECUTION TIME:
0.175905
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:44:46) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(x+y+z)-(x)-(y)
print(max(x,y,z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x+y+z)-(x)-(y)
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:45:28) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:45:30) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- EXECUTION TIME:
0.16939
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:46:07) 
-- CODE:
x=int(input(6))
y=int(input(2))
z=int(input(4))
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- OUTPUT:
624-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:46:11) 
-- CODE:
x=int(input(6))
y=int(input(2))
z=int(input(4))
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- OUTPUT:
624-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:46:12) 
-- CODE:
x=int(input(6))
y=int(input(2))
z=int(input(4))
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- EXECUTION TIME:
0.208213
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
624-2
0
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:46:13) 
-- CODE:
x=int(input(6))
y=int(input(2))
z=int(input(4))
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- OUTPUT:
624-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:46:46) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(input(x+y+z)-(x)-(y))
print(max(x,y,z))
-- ERROR:
File "XXXX", line 6
    print(max(x,y,z))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:46:54) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(input(x+y+z)-(x)-(y)))
print(max(x,y,z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(input(x+y+z)-(x)-(y)))
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:47:07) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(input(x+y+z)-(x)-(y))
print(max(x,y,z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(x+y+z)-(x)-(y))
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:47:14) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:47:18) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- EXECUTION TIME:
0.226158
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:47:37) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(x)-(y))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:47:57) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(y)-(x))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:47:58) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(int(x+y+z)-(y)-(x))
print(max(x,y,z))
-- EXECUTION TIME:
0.154005
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:57:09) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:57:13) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- EXECUTION TIME:
0.269038
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:57:13) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- EXECUTION TIME:
0.122111
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:57:23) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print(input(x+y+z)-(y)-(x))
print(max(x,y,z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(input(x+y+z)-(y)-(x))
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:57:45) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:57:49) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- EXECUTION TIME:
0.161829
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:29:23) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:29:41) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- EXECUTION TIME:
0.145625
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:29:51) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:29:59) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z)
-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:30:12) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:30:19) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))

-- OUTPUT:
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:21) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))

-- EXECUTION TIME:
0.198182
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:30:24) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- OUTPUT:
2
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:25) 
-- CODE:
x=int(6)
y=int(2)
z=int(4)
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- EXECUTION TIME:
0.189399
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
2
4
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:30:48) 
-- CODE:
num1=int(input("leia o primeiro numero:"))
num2=int(input("leia o segndo numero:"))
num3=int(input("leia o terceiro numero:"))
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(min(x,y,z))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:31:17) 
-- CODE:
x=int(input("leia o primeiro numero:"))
y=int(input("leia o segndo numero:"))
z=int(input("leia o terceiro numero:"))
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:31:23) 
-- CODE:
x=int(input("leia o primeiro numero:"))
y=int(input("leia o segndo numero:"))
z=int(input("leia o terceiro numero:"))
print(min(x,y,z))
print((x+y+z)-(y)-(x))
print(max(x,y,z))
-- EXECUTION TIME:
0.205616
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
